--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.github.bastide</groupId>
     <artifactId>Futures</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <!-- configuration du plugin exec-maven-plugin  -->            
+        <!-- On pourra exécuter le programme avec : 'mvn package exec:java' -->            
+        <exec.mainClass>futures.Main</exec.mainClass>
     </properties>
 </project>
